--- a/index.html
+++ b/index.html
@@ -7,10 +7,25 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <script src ="java.js"> </script>
 </head>
 <body>
-   <h1>AP COMPUTER SCIENCE A</h1> 
-   <div class = "vertical"></div>
-</body>
+    <div class = "top-text lowell"> Lowell High School</div>
+    <div class = "top-text icons" id="datetime"></div>
+    <div class = "date-divider"></div>
+        <h1 id = "big-header">AP COMPUTER SCIENCE A</h1> 
+     <div class = "vertical-divider"></div>
+     <div class = "box"> 
+       <div class = "agenda"> Weekly Agenda </div>
+       <ul>
+         <li> dc98shd98fhpsdf</li>
+         <li> dc98shd98fhpsdf</li>
+         <li> dc98shd98fhpsdf</li>
+         <li> dc98shd98fhpsdf</li>
+         <li> dc98shd98fhpsdf</li>
+         <li> dc98shd98fhpsdf</li>
+       </ul>  
+       </div>
+  </body>
 </html>
