--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lowell APCSA</title>
+    <title> Lowell APCSA </title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-    <script src ="java.js"> </script>
 </head>
 <body>
     <div class = "top-text lowell"> Lowell High School</div>
     <div class = "top-text icons" id="datetime"></div>
+      <script> 
+        var now = new Date();
+        var datetime = now.toDateString();
+        datetime = datetime.substring(0,3)+ "," +datetime.substring(3,datetime.length-4);
+        document.getElementById("datetime").innerHTML = datetime;
+      </script>
     <div class = "date-divider"></div>
         <h1 id = "big-header">AP COMPUTER SCIENCE A</h1> 
      <div class = "vertical-divider"></div>
