--- a/index.html
+++ b/index.html
@@ -10,27 +10,39 @@
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class = "top-text lowell"> Lowell High School</div>
-    <div class = "top-text icons" id="datetime"></div>
-      <script> 
-        var now = new Date();
-        var datetime = now.toDateString();
-        datetime = datetime.substring(0,3)+ "," +datetime.substring(3,datetime.length-4);
-        document.getElementById("datetime").innerHTML = datetime;
-      </script>
-    <div class = "date-divider"></div>
-        <h1 id = "big-header">AP COMPUTER SCIENCE A</h1>
-     <div class = "vertical-divider"></div>
+  <div class = "top-text lowell"> Lowell High School</div>
+  <div class = "top-text icons" id="datetime"></div>
+  <div id = "date-divider"></div>
+      <h1 id = "big-header">AP COMPUTER SCIENCE A</h1> 
+   <div class = "vertical-divider"></div>
+  <div class = "three">
      <div class = "box"> 
-       <div class = "agenda"> Weekly Agenda </div>
-       <ul>
-         <li> dc98shd98fhpsdf</li>
-         <li> dc98shd98fhpsdf</li>
-         <li> dc98shd98fhpsdf</li>
-         <li> dc98shd98fhpsdf</li>
-         <li> dc98shd98fhpsdf</li>
-         <li> dc98shd98fhpsdf</li>
-       </ul>  
-       </div>
-  </body>
+     <div class = "agenda"> Weekly Agenda </div>
+     <ul>
+       <li> dc98shd98fhpsdf</li>
+       <li> dc98shd98fhpsdf</li>
+       <li> dc98shd98fhpsdf</li>
+       <li> dc98shd98fhpsdf</li>
+       <li> dc98shd98fhpsdf</li>
+       <li> dc98shd98fhpsdf</li>
+     </ul>  
+     </div>
+     <div class = "subheadings"> 
+      Slides &emsp; &emsp; &emsp;&emsp;&emsp;Hyperlinks 
+     </div>
+     <div class= "links"> 
+       <br><br>
+       <a href="https://classroom.google.com">
+       Google Classroom </a> 
+       <br>
+       <br>
+       <a href="https://processing.org/reference/">
+         Processing Reference </a>
+       <br>
+       <br>
+       <a href="https://github.com">
+         GitHub Login</a>
+     </div>
+  </div>
+</body>
 </html>
