--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     datetime = datetime.substring(0,3)+ "," +datetime.substring(3,datetime.length-4);
     document.getElementById("datetime").innerHTML = datetime;
   </script>
+    <img id = "light-mode" href="/images/brightness-alt-high-fill.svg" width="45" height="45" fill="currentColor">
+    <img id = "dark-mode" href="/images/moon-stars.svg" width="45" height="45" fill="currentColor"> 
+    <img id = "menu" href="/images/list.svg" width="50" height="50" fill="currentColor"> 
   <div id = "date-divider"></div>
       <h1 id = "big-header">AP COMPUTER SCIENCE A</h1> 
    <div class = "vertical-divider"></div>
@@ -38,15 +41,15 @@
      </div>
      <div class= "links"> 
        <br><br>
-       <a href="https://classroom.google.com">
+       <a href="https://classroom.google.com" target="_blank">
        Google Classroom </a> 
        <br>
        <br>
-       <a href="https://processing.org/reference/">
+       <a href="https://processing.org/reference/" target="_blank">
          Processing Reference </a>
        <br>
        <br>
-       <a href="https://github.com">
+       <a href="https://github.com" target="_blank">
          GitHub Login</a>
      </div>
   </div>
