--- a/index.html
+++ b/index.html
@@ -13,14 +13,20 @@
   <div class = "top-text lowell"> Lowell High School</div>
   <div class = "top-text right-stuff" id="datetime"></div>
   <script src = "./j.js"></script>
-  <img  id="lowell-logo"src="./images/lowell-logo.png" alt="" />
+  <img  id="lowell-logo"src="https://assets.codepen.io/12819943/logo+lowell.png" alt="" />
   <div class = "icons">
-    <img id="gc-logo"src="./images/Google-Classroom-Logo.png" alt=""/>
-    <img id = "processing-logo" src="./images/Processing_2021_logo.svg" alt="" />
-    <img id="github-logo" src="./images/25231.png" alt="" />
-    <img id = "light-mode" src="./images/brightness-alt-high-fill.svg" alt="">
-    <img id = "dark-mode" src="./images/moon-stars.svg" alt="" >
-    <img id = "menu" src= "./images/list.svg" alt="">
+    <img id="gc-logo"src="https://assets.codepen.io/12819943/Google-Classroom-Logo_1.png" alt=""/>
+    <a href="https://processing.org/reference/">
+      <img id = "processing-logo" src="https://assets.codepen.io/12819943/Processing_2021_logo.svg" alt="" />
+    </a>
+    <img id="github-logo" src="https://assets.codepen.io/12819943/25231.png" alt="" />
+    <button>
+      <img id = "light-mode" src="https://assets.codepen.io/12819943/brightness-alt-high-fill.svg" alt="" fill:"currentColor">
+    </button>
+    <button>
+      <img id = "dark-mode" src="https://assets.codepen.io/12819943/moon-stars.svg" alt="" >
+      </button>
+    <img id = "menu"src="https://assets.codepen.io/12819943/list.svg" alt="">
   </div>
   <div class= "blank-icons">
     <div id="box1"></div>
@@ -45,12 +51,11 @@
      </ul>  
      </div>
      <div class = "subheadings"> 
-      Slides &emsp; &emsp; &emsp;&emsp;&emsp;&emsp;&emsp; Hyperlinks 
+      Slides &emsp; &emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; TBD 
      </div>
      <div class= "links"> 
        <br><br>
-       <a href="https://classroom.google.com">
-       Google Classroom </a> 
+       <embed src="http://wwww.classroom.google.com" style="width:500px; height: 300px;">
        <br>
        <br>
        <a href="https://processing.org/reference/">
