--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
        </div>
        <div class= "links"> 
          <br><br>
-         <iframe src="http://wwww.classroom.google.com" id = "classroom" title="description"></iframe>
+         <!-- <iframe src="http://wwww.classroom.google.com" id = "classroom" title="description"></iframe> -->
        </div>
     </div>
     <div id = "side-menu">
